# digit-recognition-dnn

./: .gitignore  Cargo.toml  README.md  data.json
data/: getData.py  pytorchsolution.py
src/: dendrite.rs  image_processing.rs  layer.rs  main.rs  network.rs  neuron.rs
src/activation_functions/: functions.rs
